# MDH.Thesis.RoboticROS2

./: .gitignore  brick.launch.py  multirobot.launch.py  multirobot.launch.xml  onerobot.launch.py  onerobot.launch.xml  sourceStuff.sh  world.world
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
afra-workspace/Ros2StateMovement/: .project
afra-workspace/Ros2StateMovement/src/: MovementRobotNaive.rebeca  MovementRobotPathfinding.property  MovementRobotPathfinding.rebeca  MovementRobotStateMachine.rebeca  MultiRobotPathfinding.property  MultiRobotPathfinding.rebeca  TestBugs.property  TestBugs.rebeca
models/dolly/: model.config  model.sdf
models/my_robot/: model.sdf
rebeca-ros2-model-transform/: pom.xml
rebeca-ros2-model-transform/src/main/java/com/kostya9/rebeca_ros2_model_transformer/: Main.java  Ros2TimedRebecaModelTransformer.java
rebeca-ros2-model-transform/src/main/java/com/kostya9/rebeca_ros2_model_transformer/cpp/: CPP_KEYWORD.java  CppCodeEmitter.java  CppFile.java  HeaderCppFile.java
rebeca-ros2-model-transform/src/main/java/com/kostya9/rebeca_ros2_model_transformer/transformers/: CppTransformer.java  EnvironmentVariables.java  KnownCppTypes.java
rebeca-ros2-model-transform/src/main/resources/: testRebeca.rebeca
scripts/: runAfra.sh  sourceStuff.sh
src/pathfinder/: CMakeLists.txt  package.xml
src/pathfinder/src/: main.cpp  path.hh
src/pathfinder_gui/: package.xml  setup.cfg  setup.py
src/pathfinder_gui/pathfinder_gui/: main.py
